@@ -12,6 +12,7 @@ Comments= <<EOT
 - Rename module Benchmark::Featureset::StopWordLists (capital 'W').
 This matches Lingua::EN::StopWordList.
 - Replace Hash::FieldHash with Moo and Types::Standard.
+- Add scripts/stopwordlists.sh (useful only to me).
 EOT
 
 [V 1.01]
